# service-ontology-lite

./: README-ko_kr.md  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING-ko_kr.md  CONTRIBUTING.md
docs/: service-ontology.schema.json
sample-app/: service-ontology.json
src/service_ontology_lite/: __init__.py  agent_os.py  cli.py  mcp_server.py  scanner.py  schema.py
tests/: test_agent_os_cli_mcp.py  test_agent_os_registry.py  test_feature_hardening.py  test_public_api.py  test_version.py
