[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "service-ontology-lite"
version = "0.1.0"
description = "Lightweight service ontology, audit CLI, and MCP server for small web apps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "veris", email = "hello@veris.kr" }]
keywords = ["ontology", "mcp", "audit", "nextjs", "vercel", "ai-coding"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/veris-official/service-ontology-lite"
Repository = "https://github.com/veris-official/service-ontology-lite"
Issues = "https://github.com/veris-official/service-ontology-lite/issues"
Documentation = "https://github.com/veris-official/service-ontology-lite#readme"

[project.optional-dependencies]
dev = ["build", "pytest", "ruff", "twine"]

[project.scripts]
service-ontology = "service_ontology_lite.cli:main"
service-ontology-mcp = "service_ontology_lite.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/service_ontology_lite"]

[tool.hatch.build.targets.wheel.force-include]
"docs/service-ontology.schema.json" = "service_ontology_lite/service-ontology.schema.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
